new proj/src/objects/GE_PW_Key_Players__c.object
<CustomObject>
    <fields>
        <fullName>Consultant_to_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed is created fro R-6998</description>
        <label>Consultant to Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PW_3rd_Party_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Players</relationshipLabel>
        <relationshipName>Deal_Structure</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_PW_Asset_Mgt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Mgt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_CMU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_CSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Depot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Depot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Developer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Developer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_EPC_Role__c</fullName>
        <label>EPC Role</label>
        <picklist>
            <controllingField>GE_PW_EPC__c</controllingField>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consortium Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_EPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Electrical_BOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical BOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_End_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Engineering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Equity_Ownership__c</fullName>
        <label>% Equity Ownership</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PW_Equity_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equity Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_GAS_Byr_Agt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buyer&apos;s Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_GAS_Slr_Agt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seller&apos;s Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_In_Partnership_Consortium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Partnership/Consortium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Installation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_LeglEntity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Mechanical_BOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mechanical BOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_O_M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>O &amp; M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Key Players</relationshipLabel>
        <relationshipName>Deal_Structure</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_PW_Parts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Power_Purchaser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power Purchaser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Prime_Contr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime Contr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_SOL_Intgrtr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_SOL_Inv_Sup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inverter Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_SOL_Mod_Sup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Module Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Sales_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Sub_to_Major_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub to Major Sub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_Sub_to_Prime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub to Prime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_TAs_TDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TA&apos;s/TDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_TM_Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TM Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_WIWS_Inf__c</fullName>
        <label>Information</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_WIWS_KPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Player Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Key Players</relationshipLabel>
        <relationshipName>Key_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PW_WIWS_KR__c</fullName>
        <label>Key Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner’s Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Purchaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Agent</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_WIWS_PS__c</fullName>
        <label>Key Contracting Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>In Partnership/Consortium?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub to Major Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub to Prime</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_WIWS_SP__c</fullName>
        <label>Scope Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical BOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA’s/TDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical BOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_WS_AI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_WS_Technical_operator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical operator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_influencer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Influencer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEP_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created for R-6998</description>
        <label>MEP Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>influencer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>influencer</label>
        <type>Checkbox</type>
    </fields>
    <label>Key Player</label>
    <nameField>
        <displayFormat>KP-{0}</displayFormat>
        <label>KP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Players</pluralLabel>
    <recordTypes>
        <fullName>GE_PW_Aero_Key_Player</fullName>
        <active>true</active>
        <label>GE PW Aero Key Player</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Key_Player</fullName>
        <active>true</active>
        <description>GE PW Key Player</description>
        <label>GE PW Key Player</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Solar_Key_Player</fullName>
        <active>true</active>
        <label>GE PW Solar Key Player</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Thermal_Key_Player</fullName>
        <active>true</active>
        <label>GE PW Thermal Key Player</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_WS_Key_Player</fullName>
        <active>true</active>
        <label>GE PW Wind Services Key Player</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PW_Wind_Equipment_Key_Player</fullName>
        <active>true</active>
        <label>GE PW Wind Equipment  Key Player</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GE_PW_Equity_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(GE_PW_Equity_Ownership__c  &gt; 1, GE_PW_Equity_Ownership__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>GE_PW_Equity_Ownership__c</errorDisplayField>
        <errorMessage>% equity should not exceed 100 and should not be less than zero</errorMessage>
    </validationRules>
</CustomObject>